Add SuddenrunPlaylistRepositoryTest